--- a/WebApp/wwwroot/Admin/css/customAdmin.css
+++ b/WebApp/wwwroot/Admin/css/customAdmin.css
@@ -183,3 +183,8 @@ footer.sticky-footer {
         overflow-x:hidden
     }
 }
+.notAllow{
+    color:lightgray!important;
+    cursor:not-allowed;
+    pointer-events:none;
+}
