--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark"  asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="SPanel1325" asp-action="Index">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Admin" asp-action="Dashboard">Dashboard</a>
+                            <a class="nav-link text-dark" asp-controller="SPanel1325" asp-action="Dashboard">Dashboard</a>
                         </li>
                     </ul>
                 </div>
